--- a/examples/dg_simple/dg_simple.yml
+++ b/examples/dg_simple/dg_simple.yml
@@ -19,7 +19,7 @@ server_ip_list: ["127.0.0.1", "129.254.81.204"]
 
 dg_srcdir: "./../src"              # path of deepguider/src folder (required for python embedding)
 enable_tts: 1
-threaded_run_python: 1
+threaded_run_modules: 1
 use_high_precision_gps: 0     # 0: asen gps, 1: Novatel gps
 
 ### Other Configurations
