--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -30,6 +30,11 @@ video_recording: 0
 video_recording_fps: 15
 recording_header_name: "dg_ros_"
 
+### VPS Specific Options
+vps_load_dbfeat: 0
+vps_save_dbfeat: 0
+vps_gps_accuracy: 0.9  # Constant gps accuracy related to search range. In streetview image server, download_radius = int(10 + 190*(1-vps_gps_accuracy)) , 1:10m, 0.95:20m, 0.9:29m, 0.79:50, 0.0:200 meters
+
 ### Topic Names Set
 ETRI_CART:
   topic_cam: "/uvc_camera/image_raw/compressed"
