--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -13,7 +13,7 @@ enable_mapserver: 0
 
 ### Main Options
 site_index: 4            # 0: ETRI, 1: COEX, 2: Bucheon, 3: TEST_ETRI, 4: TEST_COEX, ...
-site_names: ["ETRI", "COEX", "Bucheon", "TEST_ETRI", "TEST_COEX"]
+site_names: ["ETRI", "COEX", "Bucheon", "TEST_ETRI", "TEST_COEX", "TEST_ETRI_INDOOR"]
 server_ip_index: 0          # 0: 127.0.0.1, 1: 129.254.81.204, ...
 server_ip_list: ["127.0.0.1", "129.254.81.204"]
 topic_name_index: 0         # 0: ETRI CART, 1: KETI ROBOT
@@ -73,6 +73,19 @@ TEST_ETRI:
   image_server_port: "10000"
   gps_input_path: "data/ETRI/191115_151140_ascen_fix.csv"
   video_input_path: "data/ETRI/191115_151140_images.avi"
+
+TEST_ETRI_INDOOR:
+  map_image_path: "data/ETRI/NaverMap_ETRI(Satellite).png"
+  map_data_path: "data/ETRI/TopoMap_ETRI.csv"
+  map_ref_point_latlon: [36.379208, 127.364585]
+  map_ref_point_pixel: [1344, 1371]
+  map_pixel_per_meter: 1.2474
+  map_image_rotation: 0.95
+  map_view_offset: [1289, 371]
+  map_view_size: [1800, 1012]
+  image_server_port: "10003"
+  gps_input_path: ""
+  video_input_path: ""
   
 TEST_COEX:
   map_image_path: "data/COEX/NaverMap_COEX(Satellite).png"
