--- a/examples/dg_simple/dg_simple.yml
+++ b/examples/dg_simple/dg_simple.yml
@@ -48,11 +48,11 @@ TEST_ETRI:
   video_input_path: "data/ETRI/191115_151140_images.avi"
   
 TEST_ETRI_INDOOR:
-  map_image_path: "data/ETRI/NaverMap_ETRI(Satellite).png"
+  map_image_path: "data/ETRI/ETRI_Indoor_7F.png"
   map_data_path: "data/ETRI/TopoMap_ETRI.csv"
-  map_ref_point_latlon: [36.379208, 127.364585]
-  map_ref_point_pixel: [1344, 1371]
-  map_pixel_per_meter: 1.2474
+  map_ref_point_latlon: [36.380199, 127.367873]
+  map_ref_point_pixel: [860, 497]
+  map_pixel_per_meter: 16.7
   map_image_rotation: 0.95
   map_view_offset: [1289, 371]
   map_view_size: [1800, 1012]
