--- a/examples/dg_simple/CMakeLists.txt
+++ b/examples/dg_simple/CMakeLists.txt
@@ -4,7 +4,7 @@ string(REPLACE " " "_" ProjectId ${ProjectId})
 project(${ProjectId} C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -O3")
 set(BINDIR	"${CMAKE_SOURCE_DIR}/../../bin")
 set(SRCDIR	"${CMAKE_SOURCE_DIR}/../../src")
 set(EXTDIR	"${CMAKE_SOURCE_DIR}/../../EXTERNAL")
