--- a/examples/dg_simple/dg_simple.yml
+++ b/examples/dg_simple/dg_simple.yml
@@ -2,20 +2,21 @@
 ---
 ## Activate/deactivate submodules
 enable_intersection: 0
+enable_ocr: 0
 enable_vps: 0
 enable_lrpose: 0
-enable_poi_logo: 0
-enable_poi_ocr: 0
 enable_roadtheta: 0
 enable_exploration: 0
+enable_logo: 0
 enable_imu: 0
-enable_mapserver: 0
+enable_mapserver: 0    # 0: use saved offline map, 1: online mapserver
 
 ### Main Options
 site_index: 5            # 0: ETRI, 1: COEX, 2: Bucheon, 3: TEST_ETRI, 4: TEST_COEX, ...
 site_names: ["ETRI", "COEX", "Bucheon", "TEST_ETRI", "TEST_COEX", "TEST_ETRI_INDOOR"]
 server_ip_index: 0     # 0: 127.0.0.1, 1: 129.254.81.204, ...
 server_ip_list: ["127.0.0.1", "129.254.81.204"]
+image_server_port: "10000"  # etri: 10000, coex: 10001, bucheon: 10002, etri_indoor: 10003
 
 dg_srcdir: "./../src"              # path of deepguider/src folder (required for python embedding)
 enable_tts: 1
@@ -23,8 +24,7 @@ threaded_run_modules: 0
 use_high_precision_gps: 0     # 0: asen gps, 1: Novatel gps
 
 ### Other Configurations
-enable_data_logging: 0
-video_recording: 1
+video_recording: 0
 video_recording_fps: 15
 recording_header_name: "dg_simple_"
 
