[gui] add bottom_padding option

--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -84,6 +84,7 @@ TEST_ETRI_INDOOR:
   map_image_rotation: 0.95
   map_view_offset: [1289, 371]
   map_view_size: [1800, 1012]
+  map_view_bottom_padding: 305
   image_server_port: "10003"
   gps_input_path: ""
   video_input_path: ""
