--- a/examples/dg_simple/dg_simple.vcxproj
+++ b/examples/dg_simple/dg_simple.vcxproj
@@ -80,6 +80,7 @@
       <PreprocessorDefinitions>DG_TEST_SIMPLE;NDEBUG;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>..\..\src;..\..\EXTERNAL\OpenCV\include;..\..\EXTERNAL\python\include;..\..\EXTERNAL\rapidjson\include;..\..\EXTERNAL\curl\include;..\..\EXTERNAL\rapidjson\include;..\..\EXTERNAL\curl\include</AdditionalIncludeDirectories>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
