[dg_simple_ros] added minor bugfix for vps (m_vps_id) and modified script for new topics in dg_run_saved_bag.sh

--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -34,6 +34,7 @@ recording_header_name: "dg_ros_"
 ## VPS Specific Options
 vps_load_dbfeat: 0
 vps_save_dbfeat: 0
+vps_use_custom_image_server: 0   # 0 (default) to use naver roadview, 1 to use custom images for database images
 vps_gps_accuracy: 0.9  # Constant gps accuracy related to search range. In streetview image server, download_radius = int(10 + 190*(1-vps_gps_accuracy)) , 1:10m, 0.95:20m, 0.9:29m, 0.79:50, 0.0:200 meters
 
 ## Topic Names Set
