--- a/examples/map_editor/map_editor.vcxproj.filters
+++ b/examples/map_editor/map_editor.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="..\..\src\core\map.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DlgMapAlign.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MapEditorDlg.cpp">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DlgView.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DlgMapAlign.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
