--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -1,8 +1,8 @@
 %YAML:1.0
 ---
 ## Activate/deactivate submodules
-enable_360cam: 0
-enable_360cam_crop: 1
+enable_360cam: 0  # not required.
+enable_360cam_crop: 0
 enable_intersection: 0
 enable_ocr: 0    # 0: disable, 1: run as internal module, 2: run as external ros node 
 enable_vps: 0    # 0: disable, 1: run as internal module, 2: run as external ros node
