--- a/examples/dg_simple_ros/dg_ros.yml
+++ b/examples/dg_simple_ros/dg_ros.yml
@@ -15,13 +15,15 @@ enable_odometry: 1
 enable_mapserver: 0    # 0: use saved offline map, 1: online mapserver
 
 ## Main Options
-site_index: 4            # 0: ETRI, 1: COEX, 2: Bucheon, 3: TEST_ETRI, 4: TEST_COEX, 5:TEST_ETRI_INDOOR, 6:ETRI_EXTENDED, 7:TEST_COEX_INOUT ...
-site_names: ["ETRI", "COEX", "Bucheon", "TEST_ETRI", "TEST_COEX", "TEST_ETRI_INDOOR", "ETRI_EXTENDED", "TEST_COEX_INOUT"]
+site_index: 4            # 0: ETRI, 1: COEX, 2: Bucheon, 3: TEST_ETRI, 4: TEST_COEX, 5:TEST_ETRI_INDOOR, 6:ETRI_EXTENDED, 7:TEST_COEX_INOUT, 8:Bucheon_KETI, 9:"COEX_KETI" ...
+site_names: ["ETRI", "COEX", "Bucheon", "TEST_ETRI", "TEST_COEX", "TEST_ETRI_INDOOR", "ETRI_EXTENDED", "TEST_COEX_INOUT", "Bucheon_KETI", "COEX_KETI"]
 server_ip_index: 1          # 0: 127.0.0.1, 1: 129.254.81.204, ...
 server_ip_list: ["127.0.0.1", "129.254.81.204"]
 image_server_port: "10000"  # etri: 10000, coex: 10001, bucheon: 10002, etri_indoor: 10003
 topic_name_index: 0         # 0: ETRI CART_VER2_ANDROIDGPS, 1: ETRI CART_VER2, 2:KETI ROBOT
 topic_names_set: ["ETRI_CART_VER2_ANDROIDGPS", "ETRI_CART_VER2", "KETI_ROBOT", "ETRI_CART_VER1"]
+robot_site_index: 0      #0:"Bucheon_KETI", 1:"COEX_KETI"
+robot_site_set: ["Bucheon_KETI", "COEX_KETI"]
 
 dg_srcdir: "/home/dgtest/deepguider/src"  # path of deepguider/src folder (required for python embedding)
 enable_tts: 1
@@ -84,7 +86,7 @@ KETI_ROBOT:
   topic_360cam: "/theta360z1_raw"
   topic_360cam_crop: "/theta360z1_crop"
   topic_cam: "/usb_cam_1/image_raw/compressed"
-  topic_gps: "/fix"
+  topic_gps: "/fix" #"/andro2linux_gps" 
   #topic_dgps: ""
   #topic_imu: "/gx5/imu/data"
   #topic_rgbd_image: "/rs_front_camera1/color/image_raw/compressed"
@@ -195,4 +197,29 @@ Bucheon:
   map_view_offset: [652, 227]
   image_server_port: "10002"
   gps_input_path: "data/Sensor_record_20210513_Bucheon_AndroSensor.csv"
+  video_input_path: ""
+
+Bucheon_KETI:
+  map_image_path: "data/Bucheon/bucheon_robotmap(flipudlr).png" 
+  map_data_path: "data/Bucheon/TopoMap_Bucheon.csv"
+  map_ref_point_latlon: [37.515838, 126.764309]
+  map_ref_point_pixel: [2410, 5142]
+  map_pixel_per_meter: 10.2
+  map_image_rotation: 1.4
+  map_view_offset: [752, 227]
+  image_server_port: "10002"
+  gps_input_path: "data/Sensor_record_20210513_Bucheon_AndroSensor.csv"
+  video_input_path: ""
+  robot_map_rotation: -90
+  robot_map_origin: [3110, 2576]
+
+COEX_KETI:
+  map_image_path: "data/COEX/occumap_mcl(fliplr).png"
+  map_data_path: "data/COEX/TopoMap_COEX_220725.csv"
+  map_ref_point_latlon: [37.5105315, 127.0600675]
+  map_ref_point_pixel: [4383, 10463]
+  map_pixel_per_meter: 20.0
+  map_image_rotation: -23.5
+  image_server_port: "10001"
+  gps_input_path: "data/200925_153949_AndroSensor.csv"
   video_input_path: ""
